--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^27.0.3",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
+    "chalk": "4.1.0",
     "eslint": "^8.3.0",
     "jest": "^27.4.3",
     "ts-jest": "^27.0.7",
